# level_up_auth_service

./: .env.template  README.md  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 031ca40a6339_create_users_table.py
app/api/: __init__.py
app/core/: config.py
app/models/: base.py  users.py
app/utils/: db_helper.py
