[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
pydantic-settings = "^2.10.1"
pydantic = {extras = ["email"], version = "^2.11.9"}
uvicorn = {extras = ["standart"], version = "^0.35.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
asyncpg = "^0.30.0"
